deployment/examplemodule1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qvikstartgke-example1
  labels:
    app: qvikstartgke-example
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app: qvikstartgke-example
    tier: frontend
