deployment/examplemodule2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qvikstartgke-example2
  labels:
    app: qvikstartgke-example
    tier: worker
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app: qvikstartgke-example
    tier: worker
